--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -35,13 +35,28 @@ $H_A$: The average number of pushups done by line players is statistically diffe
 
 <!--Divide this section into two sub-sections: One for your descriptive results and one for your inferential results.!-->
 
+
+
 ## Descriptive Results
 
 ### Graphical Descriptive Results
 
 <!--Graphical results here. Make sure to show your code. Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too. Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+boxplot(pushups~position,data=mydata)
+```
+
+
+The Boxplots show that the players in skills position typically do more push ups in two minutes than the other players in the line positions 
+
 ### Numerical Descriptive Results
+
+```{r}
+favstats(pushups~position,data=mydata)
+```
+
+This table shows the average number of pushups done by the players in line positions was 17, meaning the numbers of push ups are done in 2 minutes done by skill players was 50.
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
