--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -35,7 +35,7 @@ $H_A$: The average number of pushups done by line players is statistically diffe
 
 <!--Divide this section into two sub-sections: One for your descriptive results and one for your inferential results.!-->
 
-
+We want to determine weather the number of push ups based on position (line, skill) is different pushups is a numerical variable position is categorical 
 
 ## Descriptive Results
 
@@ -62,10 +62,19 @@ This table shows the average number of pushups done by the players in line posit
 
 ## Inferential Results
 
+```{r}
+t.test(pushups~position,data=mydata)
+```
+
+The o-value is 0.0000009421 < 0.05 so we can reject H0 
+
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
 
 # Discussion and Conclusion
+
+The difference of the "p" is less than 0.05 we reject the null hypothesis ; skills players can do more pushups than line position. 
+
 
 <!--Discussion and conclusion here. If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason. Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
 
